--- a/templates/nextcloud.systemd.j2
+++ b/templates/nextcloud.systemd.j2
@@ -2,41 +2,41 @@
 WantedBy=multi-user.target
 
 [Unit]
-Description={{service_name}} service
+Description={{nextcloud_service_name}} service
 After=docker.service
 Requires=docker.service
 
 [Service]
-ExecStartPre=-{{docker_compose_executable}} --project-directory {{docker_working_directory}} \
-                             --file {{docker_compose_path}} \
-                             --project-name {{service_name}} \
+ExecStartPre=-{{docker_compose_executable}} --project-directory {{nextcloud_docker_working_directory}} \
+                             --file {{nextcloud_docker_compose_path}} \
+                             --project-name {{nextcloud_service_name}} \
                              down --remove-orphans
 
-ExecStartPre={{docker_compose_executable}} --project-directory {{docker_working_directory}} \
-                            --file {{docker_compose_path}} \
-                            --project-name {{service_name}} \
+ExecStartPre={{docker_compose_executable}} --project-directory {{nextcloud_docker_working_directory}} \
+                            --file {{nextcloud_docker_compose_path}} \
+                            --project-name {{nextcloud_service_name}} \
                             pull
 
-ExecStart={{docker_compose_executable}} --project-directory {{docker_working_directory}} \
-                         --file {{docker_compose_path}} \
-                         --project-name {{service_name}} \
+ExecStart={{docker_compose_executable}} --project-directory {{nextcloud_docker_working_directory}} \
+                         --file {{nextcloud_docker_compose_path}} \
+                         --project-name {{nextcloud_service_name}} \
                          up
 
-ExecStop={{docker_compose_executable}} --project-directory {{docker_working_directory}} \
-                         --file {{docker_compose_path}} \
-                         --project-name {{service_name}} \
-                         exec -T -u {{www_data_uid}} app \
+ExecStop={{docker_compose_executable}} --project-directory {{nextcloud_docker_working_directory}} \
+                         --file {{nextcloud_docker_compose_path}} \
+                         --project-name {{nextcloud_service_name}} \
+                         exec -T -u {{nextcloud_www_data_uid}} app \
                          /bin/bash -c "/var/www/html/occ db:add-missing-indices"
 
-ExecStop={{docker_compose_executable}} --project-directory {{docker_working_directory}} \
-                         --file {{docker_compose_path}} \
-                         --project-name {{service_name}} \
+ExecStop={{docker_compose_executable}} --project-directory {{nextcloud_docker_working_directory}} \
+                         --file {{nextcloud_docker_compose_path}} \
+                         --project-name {{nextcloud_service_name}} \
                          down --remove-orphans
 
-ExecStop={{docker_compose_executable}} --project-directory {{docker_working_directory}} \
-                         --file {{docker_compose_path}} \
-                         --project-name {{service_name}} \
-                         run -T -u {{www_data_uid}} app \
+ExecStop={{docker_compose_executable}} --project-directory {{nextcloud_docker_working_directory}} \
+                         --file {{nextcloud_docker_compose_path}} \
+                         --project-name {{nextcloud_service_name}} \
+                         run -T -u {{nextcloud_www_data_uid}} app \
                          /bin/bash -c "echo y | /var/www/html/occ db:convert-filecache-bigint"
 
 Restart=always
