--- a/templates/nextcloud.systemd.j2
+++ b/templates/nextcloud.systemd.j2
@@ -7,37 +7,43 @@ After=docker.service
 Requires=docker.service
 
 [Service]
-ExecStartPre=-{{docker_compose_executable}} --project-directory {{nextcloud_docker_working_directory}} \
-                             --file {{nextcloud_docker_compose_path}} \
-                             --project-name {{nextcloud_service_name}} \
-                             down --remove-orphans
+ExecStartPre=-{{docker_compose_executable}} \
+  --project-directory {{nextcloud_docker_working_directory}} \
+  --file {{nextcloud_docker_compose_path}} \
+  --project-name {{nextcloud_service_name}} \
+  down --remove-orphans
 
-ExecStartPre={{docker_compose_executable}} --project-directory {{nextcloud_docker_working_directory}} \
-                            --file {{nextcloud_docker_compose_path}} \
-                            --project-name {{nextcloud_service_name}} \
-                            pull
+ExecStartPre={{docker_compose_executable}} \
+  --project-directory {{nextcloud_docker_working_directory}} \
+  --file {{nextcloud_docker_compose_path}} \
+  --project-name {{nextcloud_service_name}} \
+  pull
 
-ExecStart={{docker_compose_executable}} --project-directory {{nextcloud_docker_working_directory}} \
-                         --file {{nextcloud_docker_compose_path}} \
-                         --project-name {{nextcloud_service_name}} \
-                         up
+ExecStart={{docker_compose_executable}} \
+  --project-directory {{nextcloud_docker_working_directory}} \
+  --file {{nextcloud_docker_compose_path}} \
+  --project-name {{nextcloud_service_name}} \
+  up
 
-ExecStop={{docker_compose_executable}} --project-directory {{nextcloud_docker_working_directory}} \
-                         --file {{nextcloud_docker_compose_path}} \
-                         --project-name {{nextcloud_service_name}} \
-                         exec -T -u {{nextcloud_www_data_uid}} app \
-                         /bin/bash -c "/var/www/html/occ db:add-missing-indices"
+ExecStop={{docker_compose_executable}} \
+  --project-directory {{nextcloud_docker_working_directory}} \
+  --file {{nextcloud_docker_compose_path}} \
+  --project-name {{nextcloud_service_name}} \
+  exec -T -u {{nextcloud_www_data_uid}} app \
+  /bin/bash -c "/var/www/html/occ db:add-missing-indices"
 
-ExecStop={{docker_compose_executable}} --project-directory {{nextcloud_docker_working_directory}} \
-                         --file {{nextcloud_docker_compose_path}} \
-                         --project-name {{nextcloud_service_name}} \
-                         down --remove-orphans
+ExecStop={{docker_compose_executable}} \
+  --project-directory {{nextcloud_docker_working_directory}} \
+  --file {{nextcloud_docker_compose_path}} \
+  --project-name {{nextcloud_service_name}} \
+  down --remove-orphans
 
-ExecStop={{docker_compose_executable}} --project-directory {{nextcloud_docker_working_directory}} \
-                         --file {{nextcloud_docker_compose_path}} \
-                         --project-name {{nextcloud_service_name}} \
-                         run -T -u {{nextcloud_www_data_uid}} app \
-                         /bin/bash -c "echo y | /var/www/html/occ db:convert-filecache-bigint"
+ExecStop={{docker_compose_executable}} \
+  --project-directory {{nextcloud_docker_working_directory}} \
+  --file {{nextcloud_docker_compose_path}} \
+  --project-name {{nextcloud_service_name}} \
+  run -T -u {{nextcloud_www_data_uid}} app \
+  /bin/bash -c "echo y | /var/www/html/occ db:convert-filecache-bigint"
 
 Restart=always
 RestartSec=60s
