Install additional apt packages into nextcloud docker image

--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -15,6 +15,7 @@ services:
       - postgres_password
 
   app:
+    build: .
     image: {{ nextcloud_image_name }}:{{ nextcloud_image_version }}
     container_name: {{ nextcloud_container_name }}
     ports:
