Clean up code and fix flakering tests

--- a/templates/nextcloud-background-jobs.systemd.j2
+++ b/templates/nextcloud-background-jobs.systemd.j2
@@ -3,7 +3,7 @@ Description={{nextcloud_background_service_name}} service
 Requires={{nextcloud_service_name}}.service
 
 [Service]
-ExecStart=/usr/bin/docker exec \
+ExecStart={{docker_executable}} exec \
   -u {{ nextcloud_www_data_uid }} \
   {{ nextcloud_container_name }} \
   php -f /var/www/html/cron.php
